--- a/VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=pricing-service
 server.port=8082
+
+##Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8760/eureka/
+eureka.client.service-url.default-zone=http://localhost:8760/eureka/
+eureka.instance.prefer-ip-address=true
